--- a/index.html
+++ b/index.html
@@ -24,9 +24,25 @@
 </div>
 <!-- / header -->
 
+<main class="main">
+  <!-- lead -->
+
+  <div class="wrapper-outer wrapper-outer__lead">
+    <section class="lead ">
+      <h1 class="lead__title">Путешествия по России</h1>
+      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а
+                                здесь.</p>
+      <div class="wrapper-inner-image">
+        <img class="lead__image" src="./images/lead__image.jpg"
+             alt="лежащий человек в поезде">
+        <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
+      </div>
+    </section>
+  </div>
+  <!-- / lead -->
 
 
-
+</main>
 </body>
 
 
