fix bug with index.css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./pages/index.css" rel="stylesheet">
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Путешествия по России</title>
 </head>
 <body class="body">
-
 <!-- header -->
 <div class="wrapper-outer wrapper-outer_wide">
   <header class="header wrapper-outer__header">
