added section lead and photo-grid

--- a/index.html
+++ b/index.html
@@ -40,6 +40,70 @@
   </div>
   <!-- / lead -->
 
+  <!-- intro -->
+  <div class="wrapper-outer wrapper-outer__intro">
+    <section class="intro">
+      <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
+      <p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь
+                             поехать,
+                             но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной
+                             стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом
+                             деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым
+                             морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато
+                             Путорана. А&nbsp;ещё увидеть все эти красоты можно без
+                             миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых
+                             перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая
+                             молодая мама, которая взяла в&nbsp;охапку троих детей,
+                             усадила
+                             их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч
+                             километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали
+                             некоторые интересные места, достойные вашего отпуска.</p>
+      <ul class="intro__list">
+        <li>Часовых поясов <span class="intro__list-number">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО <span
+                class="intro__list-number">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО <span
+                class="intro__list-number">16</span></li>
+        <li>Природных заповедников <span
+                class="intro__list-number">105</span></li>
+        <li>Аэропортов <span class="intro__list-number">241</span></li>
+      </ul>
+    </section>
+  </div>
+  <!-- / intro -->
+
+  <!-- photo-grid -->
+  <div class="wrapper-outer wrapper-outer_wide">
+    <section class="photo-grid wrapper-outer__photo-grid" aria-label="article">
+      <ul class="photo-grid__container">
+        <li><img class="photo-grid__image" src="./images/photo-grid__image-1.jpg"
+                 alt="вид из окна поезда"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid__image-2.png"
+                 alt="горы с облаками"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid__image-3.jpg"
+                 alt="поле, волк на сене"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid__image-4.jpg"
+                 alt="лес с птичьего полета"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid__image-5.jpg"
+                 alt="машина на льду"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid__image-6.png"
+                 alt="берег моря"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid__image-7.png"
+                 alt="горы со снегом"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid__image-8.png"
+                 alt="знак пешеходного перехода"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid__image-9.jpg"
+                 alt="горы с туманом"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid__image-10.jpg"
+                 alt="горы и лес"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid__image-11.jpg"
+                 alt="горы и пляж"></li>
+        <li><img class="photo-grid__image" src="./images/photo-grid__image-12.png"
+                 alt="горная коса с туманом"></li>
+      </ul>
+    </section>
+  </div>
+  <!-- / photo-grid -->
 
 </main>
 </body>
