--- a/index.html
+++ b/index.html
@@ -105,6 +105,199 @@
   </div>
   <!-- / photo-grid -->
 
+  <!-- places -->
+  <div class="wrapper-outer wrapper-outer_padding_zero">
+    <section class="places wrapper-outer__places" aria-label="article">
+      <ul class="places__items">
+        <li class="places__item">
+          <h2 class="places__title">Куршская коса</h2>
+
+          <div class="places__website">
+            <h4 class="places__url-heading">URL</h4>
+
+            <div class="places__link-wrapper">
+              <a class="places__link" href="www.park-kosa.ru">park-kosa.ru</a>
+            </div>
+          </div>
+
+          <img class="places__image" src="./images/places__image-1.jpg"
+               alt="берег с корнями деревьев">
+
+          <div class="places__paragraph-container">
+            <p class="places__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете
+                                         увидеть два водных горизонта&nbsp;&mdash;
+                                         спокойного
+                                         Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого
+                                         рябью волн Балтийского моря с&nbsp;другой.
+                                         Уникальная
+                                         природная зона на&nbsp;краю российского
+                                         анклава.</p>
+
+            <p class="places__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается.
+                                         Для путешественника и&nbsp;исследователя там&nbsp;же
+                                         по&nbsp;соседству&nbsp;&mdash; самая западная
+                                         точка
+                                         России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое
+                                         наследие россыпи небольших приморских городов.
+                                         Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие
+                                         природы и&nbsp;запах стального, прохладного
+                                         моря.</p>
+          </div>
+        </li>
+
+        <li class="places__item">
+          <h2 class="places__title">Кольский</h2>
+
+          <div class="places__website">
+            <h4 class="places__url-heading">URL</h4>
+
+            <div class="places__link-wrapper">
+              <a class="places__link"
+                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">
+                National Geographic
+              </a>
+            </div>
+          </div>
+
+          <img class="places__image" src="./images/places__image-2.jpg"
+               alt="берег с корнями деревьев">
+
+
+          <div class="places__paragraph-container">
+            <p class="places__paragraph">Почти весь полуостров находится за&nbsp;Полярным
+                                         кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash;
+              <br>
+                                         тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый
+                                         океан, прикидывающийся Баренцевым морем.</p>
+
+            <p class="places__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже
+                                         слышали историю арктического фестиваля в&nbsp;Териберке.
+                                         Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось
+                                         под снегом школьных воспоминаний об&nbsp;уроках
+                                         географии. Возможно, вы&nbsp;не&nbsp;интересовались
+                                         пронизывающей земную кору сверхглубокой скважиной,
+                                         а&nbsp;от&nbsp;апатитов
+                                         вас давно накрывает апатия. Но&nbsp;ваша мечта
+                                         увидеть
+                                         северное сияние начинает сбываться
+                                         с&nbsp;билетом<br>
+                                         в&nbsp;Мурманск.
+          </div>
+        </li>
+
+        <li class="places__item">
+          <h2 class="places__title">Алтай</h2>
+
+          <div class="places__website">
+            <h4 class="places__url-heading">URL</h4>
+
+            <div class="places__link-wrapper">
+              <a class="places__link"
+                 href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+            </div>
+          </div>
+
+          <img class="places__image" src="./images/places__image-3.jpg"
+               alt="берег с корнями деревьев">
+
+          <div class="places__paragraph-container">
+            <p class="places__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
+              <br>
+                                         В&nbsp;первую очередь из-за гор: если ехать вдоль
+                                         хребта, вы&nbsp;увидите склоны, усыпанные соснами,
+                                         горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете
+                                         в&nbsp;автомобиле окна, сможете познакомиться с&nbsp;невидимым
+                                         чудом здешних мест&nbsp;&mdash; горным воздухом.
+            </p>
+
+            <p class="places__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда
+                                         лучше всего летом. Так вы&nbsp;увидите всё
+                                         разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам
+                                         Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах
+                                         пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash;
+                                         тоже обитатели Алтайского края.
+          </div>
+        </li>
+
+        <li class="places__item">
+          <h2 class="places__title">Зимний Байкал</h2>
+
+          <div class="places__website">
+            <h4 class="places__url-heading">URL</h4>
+
+            <div class="places__link-wrapper">
+              <a class="places__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+            </div>
+          </div>
+
+          <img class="places__image" src="./images/places__image-4.jpg"
+               alt="берег с корнями деревьев">
+
+
+          <div class="places__paragraph-container">
+            <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро <br>
+                                         в&nbsp;мире. Многие также знают, что это самый
+                                         большой
+                                         источник пресной воды и&nbsp;одно из&nbsp;красивейших
+                                         мест в&nbsp;России.</p>
+
+            <p class="places__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное
+                                         место для соревнований по&nbsp;скийорингу. Это
+                                         такой
+                                         вид спорта, когда лыжник привязывает себя <br>
+                                         к&nbsp;мотоциклу, и&nbsp;тандем старается развить
+                                         как
+                                         можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте
+                                         2019 года на&nbsp;фестивале &laquo;Байкальская
+                                         миля&raquo;
+                                         был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.
+            </p>
+          </div>
+        </li>
+
+        <li class="places__item">
+          <h2 class="places__title">Карелия</h2>
+
+          <div class="places__website">
+            <h4 class="places__url-heading">URL</h4>
+
+            <div class="places__link-wrapper">
+              <a class="places__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+            </div>
+          </div>
+
+          <img class="places__image" src="./images/places__image-5.jpg"
+               alt="берег с корнями деревьев">
+
+          <div class="places__paragraph-container">
+            <p class="places__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии:
+                                         образующая тайгу сибирская лиственница не&nbsp;растёт
+                                         западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash;
+                                         леса карельских национальных парков из-за
+                                         непроходимых
+                                         болот никогда не&nbsp;знали топора. Некоторым
+                                         соснам
+                                         уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому
+                                         существу, видевшему солнце раньше, чем увидал его
+                                         Иван
+                                         Грозный. <br>
+                                         В&nbsp;девственном лесу на&nbsp;сотню километров
+                                         не&nbsp;встретишь
+                                         тропы. А&nbsp;на&nbsp;редких тропинках деревья
+              <br>
+                                         в&nbsp;паре метров от&nbsp;земли помечены
+                                         медвежьими
+                                         когтями. Чтобы все знали, кто тут хозяин.</p>
+
+
+          </div>
+        </li>
+      </ul>
+
+    </section>
+  </div>
+  <!-- / places -->
+
 </main>
 </body>
 
