--- a/index.html
+++ b/index.html
@@ -298,6 +298,20 @@
   </div>
   <!-- / places -->
 
+  <!-- cover -->
+  <div class="wrapper-outer wrapper-outer_wide">
+    <section class="cover wrapper-outer__cover">
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <h3 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h3>
+        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе <br>
+                                   &mdash;&nbsp;путешествие от&nbsp;столицы до&nbsp;Байкала
+                                   на&nbsp;электричках.
+        </p>
+      </a>
+    </section>
+  </div>
+  <!-- / cover -->
+
 </main>
 </body>
 
