added ssection footer

--- a/index.html
+++ b/index.html
@@ -76,30 +76,54 @@
   <div class="wrapper-outer wrapper-outer_wide">
     <section class="photo-grid wrapper-outer__photo-grid" aria-label="article">
       <ul class="photo-grid__container">
-        <li><img class="photo-grid__image" src="./images/photo-grid__image-1.jpg"
-                 alt="вид из окна поезда"></li>
-        <li><img class="photo-grid__image" src="./images/photo-grid__image-2.png"
-                 alt="горы с облаками"></li>
-        <li><img class="photo-grid__image" src="./images/photo-grid__image-3.jpg"
-                 alt="поле, волк на сене"></li>
-        <li><img class="photo-grid__image" src="./images/photo-grid__image-4.jpg"
-                 alt="лес с птичьего полета"></li>
-        <li><img class="photo-grid__image" src="./images/photo-grid__image-5.jpg"
-                 alt="машина на льду"></li>
-        <li><img class="photo-grid__image" src="./images/photo-grid__image-6.png"
-                 alt="берег моря"></li>
-        <li><img class="photo-grid__image" src="./images/photo-grid__image-7.png"
-                 alt="горы со снегом"></li>
-        <li><img class="photo-grid__image" src="./images/photo-grid__image-8.png"
-                 alt="знак пешеходного перехода"></li>
-        <li><img class="photo-grid__image" src="./images/photo-grid__image-9.jpg"
-                 alt="горы с туманом"></li>
-        <li><img class="photo-grid__image" src="./images/photo-grid__image-10.jpg"
-                 alt="горы и лес"></li>
-        <li><img class="photo-grid__image" src="./images/photo-grid__image-11.jpg"
-                 alt="горы и пляж"></li>
-        <li><img class="photo-grid__image" src="./images/photo-grid__image-12.png"
-                 alt="горная коса с туманом"></li>
+        <li>
+          <img class="photo-grid__image" src="./images/photo-grid__image-1.jpg"
+               alt="вид из окна поезда">
+        </li>
+        <li>
+          <img class="photo-grid__image" src="./images/photo-grid__image-2.png"
+               alt="горы с облаками">
+        </li>
+        <li>
+          <img class="photo-grid__image" src="./images/photo-grid__image-3.jpg"
+               alt="поле, волк на сене">
+        </li>
+        <li>
+          <img class="photo-grid__image" src="./images/photo-grid__image-4.jpg"
+               alt="лес с птичьего полета">
+        </li>
+        <li>
+          <img class="photo-grid__image" src="./images/photo-grid__image-5.jpg"
+               alt="машина на льду">
+        </li>
+        <li>
+          <img class="photo-grid__image" src="./images/photo-grid__image-6.png"
+               alt="берег моря">
+        </li>
+        <li>
+          <img class="photo-grid__image" src="./images/photo-grid__image-7.png"
+               alt="горы со снегом">
+        </li>
+        <li>
+          <img class="photo-grid__image" src="./images/photo-grid__image-8.png"
+               alt="знак пешеходного перехода">
+        </li>
+        <li>
+          <img class="photo-grid__image" src="./images/photo-grid__image-9.jpg"
+               alt="горы с туманом">
+        </li>
+        <li>
+          <img class="photo-grid__image" src="./images/photo-grid__image-10.jpg"
+               alt="горы и лес">
+        </li>
+        <li>
+          <img class="photo-grid__image" src="./images/photo-grid__image-11.jpg"
+               alt="горы и пляж">
+        </li>
+        <li>
+          <img class="photo-grid__image" src="./images/photo-grid__image-12.png"
+               alt="горная коса с туманом">
+        </li>
       </ul>
     </section>
   </div>
@@ -167,7 +191,8 @@
             <p class="places__paragraph">Почти весь полуостров находится за&nbsp;Полярным
                                          кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash;
               <br>
-                                         тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый
+                                         тайга, а&nbsp;на&nbsp;север&nbsp;&mdash;
+                                         Ледовитый
                                          океан, прикидывающийся Баренцевым морем.</p>
 
             <p class="places__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже
@@ -175,7 +200,8 @@
                                          Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось
                                          под снегом школьных воспоминаний об&nbsp;уроках
                                          географии. Возможно, вы&nbsp;не&nbsp;интересовались
-                                         пронизывающей земную кору сверхглубокой скважиной,
+                                         пронизывающей земную кору сверхглубокой
+                                         скважиной,
                                          а&nbsp;от&nbsp;апатитов
                                          вас давно накрывает апатия. Но&nbsp;ваша мечта
                                          увидеть
@@ -201,16 +227,19 @@
                alt="берег с корнями деревьев">
 
           <div class="places__paragraph-container">
-            <p class="places__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
+            <p class="places__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест
+                                         в&nbsp;России.
               <br>
                                          В&nbsp;первую очередь из-за гор: если ехать вдоль
-                                         хребта, вы&nbsp;увидите склоны, усыпанные соснами,
+                                         хребта, вы&nbsp;увидите склоны, усыпанные
+                                         соснами,
                                          горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете
                                          в&nbsp;автомобиле окна, сможете познакомиться с&nbsp;невидимым
                                          чудом здешних мест&nbsp;&mdash; горным воздухом.
             </p>
 
-            <p class="places__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда
+            <p class="places__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать
+                                         сюда
                                          лучше всего летом. Так вы&nbsp;увидите всё
                                          разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам
                                          Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах
@@ -241,7 +270,8 @@
                                          источник пресной воды и&nbsp;одно из&nbsp;красивейших
                                          мест в&nbsp;России.</p>
 
-            <p class="places__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное
+            <p class="places__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё
+                                         идеальное
                                          место для соревнований по&nbsp;скийорингу. Это
                                          такой
                                          вид спорта, когда лыжник привязывает себя <br>
@@ -311,9 +341,27 @@
     </section>
   </div>
   <!-- / cover -->
-
 </main>
+
+<!-- footer -->
+<div class="wrapper-outer wrapper-outer_wide">
+  <footer class="footer wrapper-outer__footer">
+    <nav class="footer__items">
+      <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+
+      <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+
+      <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+
+      <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+
+      <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+    </nav>
+
+    <p class="footer__copyright">© 2020. Владимир Павлович</p>
+  </footer>
+</div>
+<!-- / footer -->
+
 </body>
-
-
 </html>
