--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="places__paragraph-container">
             <p class="places__paragraph">Почти весь полуостров находится за&nbsp;Полярным
                                          кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash;
-              <br>
+
                                          тайга, а&nbsp;на&nbsp;север&nbsp;&mdash;
                                          Ледовитый
                                          океан, прикидывающийся Баренцевым морем.</p>
@@ -206,8 +206,8 @@
                                          вас давно накрывает апатия. Но&nbsp;ваша мечта
                                          увидеть
                                          северное сияние начинает сбываться
-                                         с&nbsp;билетом<br>
-                                         в&nbsp;Мурманск.
+                                         с&nbsp;билетом
+                                         в&nbsp;Мурманск.</p>
           </div>
         </li>
 
@@ -244,7 +244,7 @@
                                          разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам
                                          Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах
                                          пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash;
-                                         тоже обитатели Алтайского края.
+                                         тоже обитатели Алтайского края.</p>
           </div>
         </li>
 
@@ -264,17 +264,17 @@
 
 
           <div class="places__paragraph-container">
-            <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро <br>
+            <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро
                                          в&nbsp;мире. Многие также знают, что это самый
                                          большой
                                          источник пресной воды и&nbsp;одно из&nbsp;красивейших
-                                         мест в&nbsp;России.</p>
+                                         мест в&nbsp;России.
 
             <p class="places__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё
                                          идеальное
                                          место для соревнований по&nbsp;скийорингу. Это
                                          такой
-                                         вид спорта, когда лыжник привязывает себя <br>
+                                         вид спорта, когда лыжник привязывает себя
                                          к&nbsp;мотоциклу, и&nbsp;тандем старается развить
                                          как
                                          можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте
@@ -310,7 +310,7 @@
                                          уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому
                                          существу, видевшему солнце раньше, чем увидал его
                                          Иван
-                                         Грозный. <br>
+                                         Грозный.
                                          В&nbsp;девственном лесу на&nbsp;сотню километров
                                          не&nbsp;встретишь
                                          тропы. А&nbsp;на&nbsp;редких тропинках деревья
@@ -333,7 +333,7 @@
     <section class="cover wrapper-outer__cover">
       <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <h3 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h3>
-        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе <br>
+        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе
                                    &mdash;&nbsp;путешествие от&nbsp;столицы до&nbsp;Байкала
                                    на&nbsp;электричках.
         </p>
