--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <div class="places__paragraph-container">
             <p class="places__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест
                                          в&nbsp;России.
-              <br>
+
                                          В&nbsp;первую очередь из-за гор: если ехать вдоль
                                          хребта, вы&nbsp;увидите склоны, усыпанные
                                          соснами,
@@ -268,7 +268,7 @@
                                          в&nbsp;мире. Многие также знают, что это самый
                                          большой
                                          источник пресной воды и&nbsp;одно из&nbsp;красивейших
-                                         мест в&nbsp;России.
+                                         мест в&nbsp;России.</p>
 
             <p class="places__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё
                                          идеальное
@@ -314,7 +314,7 @@
                                          В&nbsp;девственном лесу на&nbsp;сотню километров
                                          не&nbsp;встретишь
                                          тропы. А&nbsp;на&nbsp;редких тропинках деревья
-              <br>
+
                                          в&nbsp;паре метров от&nbsp;земли помечены
                                          медвежьими
                                          когтями. Чтобы все знали, кто тут хозяин.</p>
