--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <main class="main">
   <!-- lead -->
 
-  <div class="wrapper-outer wrapper-outer__lead">
-    <section class="lead ">
+  <div class="wrapper-outer ">
+    <section class="lead wrapper-outer__lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а
                                 здесь.</p>
@@ -41,8 +41,8 @@
   <!-- / lead -->
 
   <!-- intro -->
-  <div class="wrapper-outer wrapper-outer__intro">
-    <section class="intro">
+  <div class="wrapper-outer">
+    <section class="intro wrapper-outer__intro">
       <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
       <p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь
                              поехать,
