--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta charset="UTF-8">
   <title>Путешествия по России</title>
 </head>
-<body class="body">
-<!-- header -->
-<div class="wrapper-outer wrapper-outer_wide">
-  <header class="header wrapper-outer__header">
+<body class="page">
+<div class="page__container">
+  <!-- header -->
+  <header class="header header_theme_position">
     <img class="header__logo"
          src="./images/logo.svg"
          alt="логотип Россия">
@@ -20,14 +20,11 @@
       <li class="header__languages-link">En</li>
     </ul>
   </header>
-</div>
-<!-- / header -->
+  <!-- / header -->
 
-<main class="main">
-  <!-- lead -->
-
-  <div class="wrapper-outer ">
-    <section class="lead wrapper-outer__lead">
+  <main class="main">
+    <!-- lead -->
+    <section class="lead lead_theme_position">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а
                                 здесь.</p>
@@ -37,16 +34,13 @@
         <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
       </div>
     </section>
-  </div>
-  <!-- / lead -->
+    <!-- / lead -->
 
-  <!-- intro -->
-  <div class="wrapper-outer">
-    <section class="intro wrapper-outer__intro">
+    <!-- intro -->
+    <section class="intro intro_theme_position">
       <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
       <p class="intro__text">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь
-                             поехать,
-                             но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной
+                             поехать, но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной
                              стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом
                              деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым
                              морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато
@@ -54,10 +48,10 @@
                              миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых
                              перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая
                              молодая мама, которая взяла в&nbsp;охапку троих детей,
-                             усадила
-                             их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч
-                             километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали
-                             некоторые интересные места, достойные вашего отпуска.</p>
+                             усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала
+                             20&nbsp;тысяч километров по&nbsp;родной стране. Мы&nbsp;выбрали
+                             и&nbsp;описали некоторые интересные места, достойные вашего
+                             отпуска.</p>
       <ul class="intro__list">
         <li>Часовых поясов <span class="intro__list-number">11</span></li>
         <li>Объектов природного наследия ЮНЕСКО <span
@@ -69,69 +63,77 @@
         <li>Аэропортов <span class="intro__list-number">241</span></li>
       </ul>
     </section>
-  </div>
-  <!-- / intro -->
+    <!-- / intro -->
 
-  <!-- photo-grid -->
-  <div class="wrapper-outer wrapper-outer_wide">
-    <section class="photo-grid wrapper-outer__photo-grid" aria-label="article">
+    <!-- photo-grid -->
+    <section class="photo-grid photo-grid_theme_position" aria-label="article">
       <ul class="photo-grid__container">
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-1.jpg"
                alt="вид из окна поезда">
         </li>
+
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-2.png"
                alt="горы с облаками">
         </li>
+
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-3.jpg"
                alt="поле, волк на сене">
         </li>
+
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-4.jpg"
                alt="лес с птичьего полета">
         </li>
+
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-5.jpg"
                alt="машина на льду">
         </li>
+
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-6.png"
                alt="берег моря">
         </li>
+
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-7.png"
                alt="горы со снегом">
         </li>
+
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-8.png"
                alt="знак пешеходного перехода">
         </li>
+
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-9.jpg"
                alt="горы с туманом">
         </li>
+
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-10.jpg"
                alt="горы и лес">
         </li>
+
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-11.jpg"
                alt="горы и пляж">
         </li>
+
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-12.png"
                alt="горная коса с туманом">
         </li>
       </ul>
     </section>
-  </div>
-  <!-- / photo-grid -->
+    <!-- / photo-grid -->
 
-  <!-- places -->
-  <div class="wrapper-outer wrapper-outer_padding_zero">
-    <section class="places wrapper-outer__places" aria-label="article">
+    <!-- places -->
+    <section class="places places_theme_position"
+             aria-label="article">
       <ul class="places__items">
         <li class="places__item">
           <h2 class="places__title">Куршская коса</h2>
@@ -139,9 +141,7 @@
           <div class="places__website">
             <h4 class="places__url-heading">URL</h4>
 
-            <div class="places__link-wrapper">
-              <a class="places__link" href="www.park-kosa.ru">park-kosa.ru</a>
-            </div>
+            <a class="places__link" href="www.park-kosa.ru">park-kosa.ru</a>
           </div>
 
           <img class="places__image" src="./images/places__image-1.jpg"
@@ -163,7 +163,8 @@
                                          точка
                                          России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое
                                          наследие россыпи небольших приморских городов.
-                                         Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие
+                                         Атмосфера здешних мест исключает суету, окуная
+                                         в&nbsp;спокойствие
                                          природы и&nbsp;запах стального, прохладного
                                          моря.</p>
           </div>
@@ -227,15 +228,18 @@
                alt="берег с корнями деревьев">
 
           <div class="places__paragraph-container">
-            <p class="places__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест
+            <p class="places__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших
+                                         мест
                                          в&nbsp;России.
 
-                                         В&nbsp;первую очередь из-за гор: если ехать вдоль
+                                         В&nbsp;первую очередь из-за гор: если ехать
+                                         вдоль
                                          хребта, вы&nbsp;увидите склоны, усыпанные
                                          соснами,
                                          горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете
                                          в&nbsp;автомобиле окна, сможете познакомиться с&nbsp;невидимым
-                                         чудом здешних мест&nbsp;&mdash; горным воздухом.
+                                         чудом здешних мест&nbsp;&mdash; горным
+                                         воздухом.
             </p>
 
             <p class="places__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать
@@ -275,12 +279,14 @@
                                          место для соревнований по&nbsp;скийорингу. Это
                                          такой
                                          вид спорта, когда лыжник привязывает себя
-                                         к&nbsp;мотоциклу, и&nbsp;тандем старается развить
+                                         к&nbsp;мотоциклу, и&nbsp;тандем старается
+                                         развить
                                          как
                                          можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте
                                          2019 года на&nbsp;фестивале &laquo;Байкальская
                                          миля&raquo;
-                                         был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.
+                                         был поставлен мировой рекорд&nbsp;&mdash;
+                                         197.011&nbsp;км/ч.
             </p>
           </div>
         </li>
@@ -292,7 +298,8 @@
             <h4 class="places__url-heading">URL</h4>
 
             <div class="places__link-wrapper">
-              <a class="places__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+              <a class="places__link"
+                 href="http://vodlozero.ru">http://vodlozero.ru/</a>
             </div>
           </div>
 
@@ -302,16 +309,19 @@
           <div class="places__paragraph-container">
             <p class="places__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии:
                                          образующая тайгу сибирская лиственница не&nbsp;растёт
-                                         западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash;
+                                         западнее Водлозера. Зато здесь она вымахивает
+                                         на&nbsp;30&nbsp;метров&nbsp;&mdash;
                                          леса карельских национальных парков из-за
                                          непроходимых
                                          болот никогда не&nbsp;знали топора. Некоторым
                                          соснам
                                          уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому
-                                         существу, видевшему солнце раньше, чем увидал его
+                                         существу, видевшему солнце раньше, чем увидал
+                                         его
                                          Иван
                                          Грозный.
-                                         В&nbsp;девственном лесу на&nbsp;сотню километров
+                                         В&nbsp;девственном лесу на&nbsp;сотню
+                                         километров
                                          не&nbsp;встретишь
                                          тропы. А&nbsp;на&nbsp;редких тропинках деревья
 
@@ -325,12 +335,10 @@
       </ul>
 
     </section>
-  </div>
-  <!-- / places -->
+    <!-- / places -->
 
-  <!-- cover -->
-  <div class="wrapper-outer wrapper-outer_wide">
-    <section class="cover wrapper-outer__cover">
+    <!-- cover -->
+    <section class="cover cover_theme_position">
       <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <h3 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h3>
         <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе
@@ -339,13 +347,11 @@
         </p>
       </a>
     </section>
-  </div>
-  <!-- / cover -->
-</main>
+    <!-- / cover -->
+  </main>
 
-<!-- footer -->
-<div class="wrapper-outer wrapper-outer_wide">
-  <footer class="footer wrapper-outer__footer">
+  <!-- footer -->
+  <footer class="footer footer_theme_position">
     <nav class="footer__items">
       <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
 
@@ -360,8 +366,7 @@
 
     <p class="footer__copyright">© 2023. Владимир Павлович</p>
   </footer>
+  <!-- / footer -->
 </div>
-<!-- / footer -->
-
 </body>
 </html>
