fixed some mistakes after first review

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
          alt="логотип Россия">
     <ul class="header__languages">
       <li class="header__languages-link header__languages-link_active">
-        Ru
+        <a class="header__link animation-links" target="_blank" href="#">Ru</a>
       </li>
-      <li class="header__languages-link">En</li>
+      <li class="header__languages-link ">
+        <a class="header__link animation-links" target="_blank" href="#">En</a>
+      </li>
     </ul>
   </header>
   <!-- / header -->
@@ -28,11 +30,11 @@
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а
                                 здесь.</p>
-      <div class="wrapper-inner-image">
+      <figure class="wrapper-inner-image">
         <img class="lead__image" src="./images/lead__image.jpg"
              alt="лежащий человек в поезде">
-        <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
-      </div>
+        <figcaption class="lead__caption">ваша полка&nbsp;&mdash; верхняя</figcaption>
+      </figure>
     </section>
     <!-- / lead -->
 
@@ -95,17 +97,17 @@
 
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-6.png"
-               alt="берег моря">
+               alt="берег моря с горами">
         </li>
 
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-7.png"
-               alt="горы со снегом">
+               alt="две вершины горы со снегом">
         </li>
 
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-8.png"
-               alt="знак пешеходного перехода">
+               alt="знак пешеходного перехода и тетраподы">
         </li>
 
         <li>
@@ -115,12 +117,12 @@
 
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-10.jpg"
-               alt="горы и лес">
+               alt="горы и болотистый лес">
         </li>
 
         <li>
           <img class="photo-grid__image" src="./images/photo-grid__image-11.jpg"
-               alt="горы и пляж">
+               alt="скалистый берег моря вид сверху">
         </li>
 
         <li>
@@ -139,9 +141,10 @@
           <h2 class="places__title">Куршская коса</h2>
 
           <div class="places__website">
-            <h3 class="places__url-heading">URL</h3>
+            <span class="places__url-heading">url</span>
 
-            <a class="places__link" href="www.park-kosa.ru">park-kosa.ru</a>
+            <a class="places__link animation-links" target="_blank"
+               href="www.park-kosa.ru">park-kosa.ru</a>
           </div>
 
           <img class="places__image" src="./images/places__image-1.jpg"
@@ -174,18 +177,16 @@
           <h2 class="places__title">Кольский</h2>
 
           <div class="places__website">
-            <h3 class="places__url-heading">URL</h3>
+            <span class="places__url-heading">url</span>
 
-            <div class="places__link-wrapper">
-              <a class="places__link"
-                 href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">
-                National Geographic
-              </a>
-            </div>
+            <a class="places__link animation-links" target="_blank"
+               href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">
+              National Geographic
+            </a>
           </div>
 
           <img class="places__image" src="./images/places__image-2.jpg"
-               alt="берег с корнями деревьев">
+               alt="скалистая гора и замерший берег моря">
 
 
           <div class="places__paragraph-container">
@@ -216,16 +217,14 @@
           <h2 class="places__title">Алтай</h2>
 
           <div class="places__website">
-            <h3 class="places__url-heading">URL</h3>
+            <span class="places__url-heading">url</span>
 
-            <div class="places__link-wrapper">
-              <a class="places__link"
-                 href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
-            </div>
+            <a class="places__link animation-links" target="_blank"
+               href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
           </div>
 
           <img class="places__image" src="./images/places__image-3.jpg"
-               alt="берег с корнями деревьев">
+               alt="стол с ноутбуком на фоне зеленого леса">
 
           <div class="places__paragraph-container">
             <p class="places__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших
@@ -256,15 +255,14 @@
           <h2 class="places__title">Зимний Байкал</h2>
 
           <div class="places__website">
-            <h3 class="places__url-heading">URL</h3>
+            <span class="places__url-heading">url</span>
 
-            <div class="places__link-wrapper">
-              <a class="places__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
-            </div>
+            <a class="places__link animation-links" target="_blank"
+               href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
 
           <img class="places__image" src="./images/places__image-4.jpg"
-               alt="берег с корнями деревьев">
+               alt="замершее озеро очень близкое фото льда на нем">
 
 
           <div class="places__paragraph-container">
@@ -295,16 +293,14 @@
           <h2 class="places__title">Карелия</h2>
 
           <div class="places__website">
-            <h3 class="places__url-heading">URL</h3>
+            <span class="places__url-heading">url</span>
 
-            <div class="places__link-wrapper">
-              <a class="places__link"
-                 href="http://vodlozero.ru">http://vodlozero.ru/</a>
-            </div>
+            <a class="places__link animation-links" target="_blank"
+               href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
 
           <img class="places__image" src="./images/places__image-5.jpg"
-               alt="берег с корнями деревьев">
+               alt="река протекающая в лесу">
 
           <div class="places__paragraph-container">
             <p class="places__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии:
@@ -339,12 +335,15 @@
 
     <!-- cover -->
     <section class="cover cover_theme_position">
-      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-        <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
-        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе
-                                   &mdash;&nbsp;путешествие от&nbsp;столицы до&nbsp;Байкала
-                                   на&nbsp;электричках.
-        </p>
+      <a class="cover__link" target="_blank"
+         href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <div class="cover__text">
+          <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo; </h2>
+          <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе
+                                     &mdash;&nbsp;путешествие от&nbsp;столицы до&nbsp;Байкала
+                                     на&nbsp;электричках.
+          </p>
+        </div>
       </a>
     </section>
     <!-- / cover -->
@@ -353,15 +352,17 @@
   <!-- footer -->
   <footer class="footer footer_theme_position">
     <nav class="footer__items">
-      <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+      <a class="footer__link" target="_blank" href="https://yandex.ru/maps">Карты</a>
 
-      <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+      <a class="footer__link" target="_blank" href="https://yandex.ru/pogoda">Погода</a>
 
-      <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+      <a class="footer__link" target="_blank" href="https://rasp.yandex.ru">Расписание</a>
 
-      <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+      <a class="footer__link" target="_blank"
+         href="https://calendar.yandex.ru">Календарь</a>
 
-      <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+      <a class="footer__link" target="_blank"
+         href="https://travel.yandex.ru">Путешествия</a>
     </nav>
 
     <p class="footer__copyright">© 2023. Владимир Павлович</p>
