fixed bugs after second review

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
          src="./images/logo.svg"
          alt="логотип Россия">
     <ul class="header__languages">
-      <li class="header__languages-link header__languages-link_active">
-        <a class="header__link animation-links" target="_blank" href="#">Ru</a>
+      <li class="header__languages-link ">
+        <a class="header__link header__link_active animation-links" target="_blank" href="#">Ru</a>
       </li>
       <li class="header__languages-link ">
         <a class="header__link animation-links" target="_blank" href="#">En</a>
@@ -144,7 +144,7 @@
             <span class="places__url-heading">url</span>
 
             <a class="places__link animation-links" target="_blank"
-               href="www.park-kosa.ru">park-kosa.ru</a>
+               href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
 
           <img class="places__image" src="./images/places__image-1.jpg"
@@ -352,16 +352,16 @@
   <!-- footer -->
   <footer class="footer footer_theme_position">
     <nav class="footer__items">
-      <a class="footer__link" target="_blank" href="https://yandex.ru/maps">Карты</a>
+      <a class="footer__link animation-links" target="_blank" href="https://yandex.ru/maps">Карты</a>
 
-      <a class="footer__link" target="_blank" href="https://yandex.ru/pogoda">Погода</a>
+      <a class="footer__link animation-links" target="_blank" href="https://yandex.ru/pogoda">Погода</a>
 
-      <a class="footer__link" target="_blank" href="https://rasp.yandex.ru">Расписание</a>
+      <a class="footer__link animation-links" target="_blank" href="https://rasp.yandex.ru">Расписание</a>
 
-      <a class="footer__link" target="_blank"
+      <a class="footer__link animation-links" target="_blank"
          href="https://calendar.yandex.ru">Календарь</a>
 
-      <a class="footer__link" target="_blank"
+      <a class="footer__link animation-links" target="_blank"
          href="https://travel.yandex.ru">Путешествия</a>
     </nav>
 
